Bug 829284 - Unity plugin doesn't display in HiDPI mode. r=bgirard