dom/plugins/ipc/PluginUtilsOSX.h
@@ -25,7 +25,8 @@ void InvokeNativeEventLoop();
 // Need to call back and send a cocoa draw event to the plugin.
 typedef void (*DrawPluginFunc) (CGContextRef, void*, nsIntRect aUpdateRect);
 
-void* GetCGLayer(DrawPluginFunc aFunc, void* aPluginInstance, bool aAvoidCGCrashes);
+void* GetCGLayer(DrawPluginFunc aFunc, void* aPluginInstance,
+                 bool aAvoidCGCrashes, double aContentsScaleFactor);
 void ReleaseCGLayer(void* cgLayer);
 void Repaint(void* cgLayer, nsIntRect aRect);
 
